--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@ body {
     width: 1920px;
     overflow: hidden;
     background-color: var(--white);
+    color: var(--black);
     z-index: -10;
     cursor: url(/img/main/neutral.png), auto !important;
     font-family: monospace;
@@ -139,7 +140,7 @@ body {
     height: 707px;
     width: 1131px;
     left: 9%;
-    top: 12%;
+    top: 4%;
 }
 
 .draggable .manilla {
@@ -169,7 +170,7 @@ body {
     height: 633px;
     width: 487px;
     left: 11%;
-    top: 13%;
+    top: 2%;
 }
 
 .draggable .archive {
@@ -195,10 +196,35 @@ body {
     background-repeat: no-repeat;
 }
 
+.documentation,
+.report {
+    padding: 7% 10%;
+    text-align: justify;
+}
+
+.header-scp {    
+    width: 100%;
+    height: 100px;
+    background-image: url(http://scp-wiki.wdfiles.com/local--files/djkaktus-guide-to-article-formatting/warning.png);
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.header-scp-report {
+    width: 100%;
+    height: 100px;
+    background-image: url(https://orig00.deviantart.net/ae08/f/2014/152/1/2/scp_foundation_personal_input_by_wolfsbane99-d7kky35.png);
+    background-size: contain;
+    background-position: left;
+    background-repeat: no-repeat;
+    margin-left: -68px;
+}
+
 .draggable.sighting {
     height: 623px;
     width: 474px;
-    top: 17%;
+    top: 7%;
     right: 35%;
 }
 
