--- a/public/css/style.css
+++ b/public/css/style.css
@@ -361,6 +361,14 @@ body {
     animation-delay: 300ms;
 }
 
+.files.loop-around {
+    transform: translateX(-280%); 
+    opacity: 0;
+    animation: slide-in forwards ;
+    animation-duration: 2000ms;
+    animation-delay: 300ms;
+}
+
 @keyframes clockwork {
     0% {transform: rotate(0deg)}
     100% {transform: rotate(360deg)}
@@ -373,7 +381,14 @@ body {
 }
 
 @keyframes slide-left {
-    0% {left: initial;}
-    60% {left: 10%;}
-    100% {left: -60%;}
+    0% {transform: translateX(inherit);}
+    60% {transform: translateX(-280%);}
+    90% {transform: translateX(-280%); opacity: 1;}
+    100% {transform: translateX(-280%); opacity: 0;}
+}
+
+@keyframes slide-in {
+    0% {transform: translateX(-280%); opacity: 0;}
+    1% {transform: translateX(480%); opacity: 0;}
+    100% {transform: translateX(0); opacity: 1;}
 }
