--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,13 +3,16 @@
 
 body {
     background-color: var(--black);
+    animation: bye 300000ms forwards;
+    background-image: url(/img/main/tooslow.png);
 }
 
 .hidden {
     display:none;
 }
 
-.draggable {
+.draggable,
+.throwable {
     position: absolute;
     z-index: 0;
     filter: drop-shadow( 0 0 20px #c7c7c732);
@@ -202,6 +205,11 @@ body {
     text-align: justify;
 }
 
+.text-boxe {
+    height: 447px;
+    overflow: scroll;
+}
+
 .header-scp {    
     width: 100%;
     height: 100px;
@@ -369,6 +377,26 @@ body {
     animation-delay: 300ms;
 }
 
+.notes {
+    height: 249px;
+    width: 300px;
+    animation: wiggle infinite 400ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    background-image: url(/img/main/notes.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    left: 78%;
+    filter: drop-shadow(1px 3px 4px #4b415767);
+}
+
+.notes:hover {
+    animation: none;
+    filter: drop-shadow(1px 3px 4px #4b415767)
+}
+
+
 @keyframes clockwork {
     0% {transform: rotate(0deg)}
     100% {transform: rotate(360deg)}
@@ -391,4 +419,18 @@ body {
     0% {transform: translateX(-280%); opacity: 0;}
     1% {transform: translateX(480%); opacity: 0;}
     100% {transform: translateX(0); opacity: 1;}
+}
+
+@keyframes bye {
+    0% { opacity: 1;}
+    99.99% { opacity: 1;}
+    100% { opacity: 0;}
+}
+
+@keyframes wiggle {
+    0% {top: 50%}
+    25% {top: 55%;}
+    50% {top: 50%}
+    75% {top: 45%;}
+    100% {top: 50%}
 }
