--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 body {
     background-color: var(--black);
     animation: bye 300000ms forwards;
-    background-image: url(/img/main/tooslow.png);
+    background-image: url(/public/img/main/tooslow.png);
 }
 
 .hidden {
@@ -20,7 +20,7 @@ body {
 }
 
 .draggable:hover {
-    cursor: url(/img/main/inpect.png), auto !important
+    cursor: url(/public/img/main/inpect.png), auto !important
 }
 
 .game-container {
@@ -31,7 +31,7 @@ body {
     background-color: var(--white);
     color: var(--black);
     z-index: -10;
-    cursor: url(/img/main/neutral.png), auto !important;
+    cursor: url(/public/img/main/neutral.png), auto !important;
     font-family: monospace;
 }
 
@@ -39,7 +39,7 @@ body {
     position: absolute;
     height: 805px;
     width: inherit;
-    background-image: url(/img/main/table.png);
+    background-image: url(/public/img/main/table.png);
     background-size: contain;
     background-position: bottom;
     background-repeat: no-repeat;
@@ -50,7 +50,7 @@ body {
     position: absolute;
     height: 595px;
     width: 595px;
-    background-image: url(/img/main/clock.png);
+    background-image: url(/public/img/main/clock.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -65,7 +65,7 @@ body {
     width: 614px;
     position: absolute;
     z-index: -1;
-    background-image: url(/img/main/s-clock.png);
+    background-image: url(/public/img/main/s-clock.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -79,7 +79,7 @@ body {
     top: 0%;
     z-index: 100;
     filter: drop-shadow(0 0 500px #4b415767);
-    cursor: url(/img/main/inpect.png), auto !important
+    cursor: url(/public/img/main/inpect.png), auto !important
 }
 
 .needle {
@@ -100,7 +100,7 @@ body {
     position: absolute;
     height: 730px;
     width: 934px;
-    background-image: url(/img/main/calendar.png);
+    background-image: url(/public/img/main/calendar.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -116,7 +116,7 @@ body {
     position: relative;
     top: -100%;
     z-index: -1;    
-    background-image: url(/img/main/s-calendar.png);
+    background-image: url(/public/img/main/s-calendar.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -130,7 +130,7 @@ body {
     top: -5%;
     z-index: 100;
     filter: drop-shadow(0 0 500px #4b415767);
-    cursor: url(/img/main/inpect.png), auto !important;
+    cursor: url(/public/img/main/inpect.png), auto !important;
 }
 
 
@@ -148,7 +148,7 @@ body {
 
 .draggable .manilla {
     position: relative;
-    background-image: url(/img/main/manilla.png);
+    background-image: url(/public/img/main/manilla.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -163,7 +163,7 @@ body {
     position: relative;
     top: -100%;
     z-index: -1;
-    background-image : url(/img/main/s-manilla.png);
+    background-image : url(/public/img/main/s-manilla.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -178,7 +178,7 @@ body {
 
 .draggable .archive {
     position: relative;
-    background-image: url(/img/main/archive.png);
+    background-image: url(/public/img/main/archive.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -193,7 +193,7 @@ body {
     position: relative;
     top: -100%;
     z-index: -1;
-    background-image : url(/img/main/s-archive.png);
+    background-image : url(/public/img/main/s-archive.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -238,7 +238,7 @@ body {
 
 .draggable .sighting {
     position: relative;
-    background-image: url(/img/main/sighting.png);
+    background-image: url(/public/img/main/sighting.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -252,7 +252,7 @@ body {
     position: relative;
     top: -100%;
     z-index: -1;
-    background-image : url(/img/main/s-sighting.png);
+    background-image : url(/public/img/main/s-sighting.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -280,7 +280,7 @@ body {
     z-index: -1;
     left: -24px;
     top: -460%;
-    background: url(/img/main/s-stamp.png);
+    background: url(/public/img/main/s-stamp.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -300,7 +300,7 @@ body {
     z-index: 3;
     height: 246px;
     width: 144px;
-    background-image: url(/img/main/stamp.png);
+    background-image: url(/public/img/main/stamp.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -319,11 +319,11 @@ body {
 }
 
 .green {
-    background-image: url(/img/main/g-stamp.png);
+    background-image: url(/public/img/main/g-stamp.png);
 }
 
 .red {
-    background-image: url(/img/main/r-stamp.png);
+    background-image: url(/public/img/main/r-stamp.png);
 }
 
 .stamp-here {
@@ -332,7 +332,7 @@ body {
     right: 33px;
     top: 26px;
     position: absolute;
-    background-image: url(/img/main/stamparea.png);
+    background-image: url(/public/img/main/stamparea.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -344,11 +344,11 @@ body {
 
 .stamp-here.stamped-real,
 .stamp-here.stamped-fake {
-    background-image: url(/img/main/stamparea-trans.png);
+    background-image: url(/public/img/main/stamparea-trans.png);
 }
 
 .stamped-real:before {
-    content: url(/img/main/real.png);
+    content: url(/public/img/main/real.png);
     position: absolute;
     right: -5%;
     top: -6%;
@@ -356,7 +356,7 @@ body {
 }
 
 .stamped-fake:before {
-    content: url(/img/main/fake.png);
+    content: url(/public/img/main/fake.png);
     position: absolute;
     right: -5%;
     top: -6%;
@@ -381,7 +381,7 @@ body {
     height: 249px;
     width: 300px;
     animation: wiggle infinite 400ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    background-image: url(/img/main/notes.jpg);
+    background-image: url(/public/img/main/notes.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
